# fabric-installer-native-bootstrap

./: .gitignore  Bootstrap.cpp  CMakeLists.txt  Cargo.toml  ISystemHelper.h  README.md  SystemHelper.cpp  SystemHelper.h  bootstrap.nim  bootstrap.nimble  build.gradle  build.rs  fabric-installer-native-bootstrap.rc  fabric-installer-native-bootstrap.sln  fabric-installer-native-bootstrap.vcxproj  fabric-installer-native-bootstrap.vcxproj.filters  main.cpp  nim.cfg  resource.h
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
packager/: .gitignore  packager.cpp  packager.vcxproj  packager.vcxproj.filters
platform/windows/: program.manifest
src/: Architecture.cpp  Architecture.h  Bootstrap.cpp  Bootstrap.h  EmbeddedResource.cpp  EmbeddedResource.h  ErrorDialog.cpp  ErrorDialog.h  ISystemHelper.h  Logger.cpp  Logger.h  SharedConstants.h  SystemHelper.cpp  SystemHelper.h  main.cpp  main.rs  resource.h
src/nix/: Platform.h  PlatformLinux.cpp  PlatformMacOS.mm  main.cpp
src/windows/: Bootstrap.cpp  SystemHelper.h  fabric-installer-native-bootstrap.aps  fabric-installer-native-bootstrap.rc  fabric-installer-native-bootstrap.vcxproj  fabric-installer-native-bootstrap.vcxproj.filters  main.cpp
