[package]
name = "fabric-installer-native-bootstrap"
version = "0.1.6"
authors = ["modmuss50 <modmuss50@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-slash = "0.1.4"

[dependencies.windows]
version = "0.24.0"
features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry"
]

[build-dependencies]
winres = "0.1.11"